infra/k8s/quota-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quota-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quota
  template:
    metadata:
      labels:
        app: quota
    spec:
      containers:
        - name: quota
          image: credit-scoring/quotas
---
apiVersion: v1
kind: Service
metadata:
  name: quota-srv
spec:
  selector:
    app: quota
  ports:
    - name: quota
      protocol: TCP
      port: 3000
      targetPort: 3000
