infra/k8s/request-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request
  template:
    metadata:
      labels:
        app: request
    spec:
      containers:
        - name: request
          image: credit-scoring/request
---
apiVersion: v1
kind: Service
metadata:
  name: request-srv
spec:
  selector:
    app: request
  ports:
    - name: request
      protocol: TCP
      port: 3000
      targetPort: 3000
